--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                             <li>
                                 <a href="cursos.html">Cursos</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="qualificações.html">Qualificações</a>
                             </li>
                             <li>
                                 <a href="projetos.html">Projetos</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </nav>
                 </div:>
@@ -48,12 +48,12 @@
         <div class="card">
             <div class="card-wrapper">
                 <h2>Meu resumo</h2>
-                <p>Vem ver</p>
+                <p>2022</p>
             </div>
         </div>    
         <div class="card-text">
             Estudante de Ténico em Desenvolvimento de sistemas com interesse pela área de Banco de dados e segurança da informação.
-            No momento desenvolvendo um projeto em Ionic, PHP e utilizando WorkBench, projeto voltado ao curso, o TCC. Em busca de uma oportunidade profissional 
+            No momento desenvolvendo um projeto em Ionic, PHP utilizando WorkBench, projeto voltado ao curso, o TCC. Em busca de uma oportunidade profissional 
             para colocar minha habidades em pratica. Atualmente expandindo meu conhecimento nas linguagens de programação, e ja iniciando uma nova jornada
             em uma linguagem de programação que tive muita vontade, o fomoso Python.
         </div>  
@@ -61,23 +61,23 @@
     <div class="card-container">
         <div class="card">
             <div class="card-wrapper">
-                <h2>Em analise</h2>
-                <p>Vem ver</p>
+                <h2>Em Desenvolvimento</h2>
+                <p>2022</p>
             </div>
         </div>    
         <div class="card-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Desenvolvendo projeto em Ionic para o meu TCC! Previsão para postagem: Julho de 2022
         </div>  
     </div>  
     <div class="card-container">
         <div class="card">
             <div class="card-wrapper">
-                <h2>Projeto 3</h2>
-                <p>Vem ver</p>
+                <h2>Proejto em Analise</h2>
+                <p>2022?</p>
             </div>
         </div>    
         <div class="card-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Projeto com o intuito de ser desenvolvido em Pyhton Puro. 
         </div>  
     </div>  
    </main>
